Event用テンプレートと、今までのイベントページを作成

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
 					<li class="active"><a href="./index.html">ホーム/Home</a></li>
-					<li><a href="./history.html">勉強会履歴/History</a></li>
+					<li><a href="./history/index.html">勉強会履歴/History</a></li>
 				</ul>
 				<div class="span1"><img src="./img/fukuoka_debian.jpg" width="100"></div>
 				<h3 class="muted">福岡Debian勉強会<br />Fukuoka Debian Study</h3>
@@ -80,7 +80,7 @@
         <h1>第02回福岡Debian勉強会は終了しました!</h1>
         <p class="lead">2013年最初の福岡Debian勉強会は終了しました。参加頂いた皆さん、会場を貸して頂いた株式会社paperboy&co.さん、ありがとうございました。</p>
 				<p class="lead">Fukuoka Debian Study No.2 has been finished! Thank you very much to all attendees and paperboy & co. for sponsor!</p>
-				<a class="btn btn-large btn-success" href="./history.html">続きを読む/Read More..</a>
+				<a class="btn btn-large btn-success" href="./history/index.html">続きを読む/Read More..</a>
       </div>
 
       <hr>
