event02のツギャッターのURL追加

--- a/history/event02.html
+++ b/history/event02.html
@@ -85,7 +85,7 @@
 					<li>場所:paperboy&co.（ペパボ)<br />福岡市中央区天神2丁目7番21号 天神プライム </li>
 					<li>日時:2013/01/26 14:00  〜  17:00</li>
 					<li>登録サイト: <a href="http://www.zusaar.com/event/487003">http://www.zusaar.com/event/487003</a></li>
-					<li>ツイートまとめ: <a href="">{URL}</a></li>
+					<li>ツイートまとめ: <a href="http://togetter.com/li/445938">http://togetter.com/li/445938</a></li>
 					<li>写真等:
 					<ul>
 						<li><a href="">{URL}</a></li>
