OCS Fukuoka 2012のページを作成、追加

--- a/history/event01-5.html
+++ b/history/event01-5.html
@@ -2,7 +2,7 @@
 <html lang="jp">
   <head>
     <meta charset="utf-8">
-		<title>過去のイベント-福岡Debian勉強会/Fukuoka Debian Study</title>
+		<title>OSC2012 Fukuoka - 福岡Debian勉強会/Fukuoka Debian Study</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="web page for Fukuoka Debian Study. 福岡Debian勉強会のサイトです ">
     <meta name="author" content="">
@@ -68,7 +68,7 @@
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
 					<li><a href="../index.html">ホーム/Home</a></li>
-					<li class="active"><a href=./history/index.html">勉強会履歴/History</a></li>
+					<li class="active"><a href="./index.html">勉強会履歴/History</a></li>
 				</ul>
 				<div class="span1"><img src="../img/fukuoka_debian.jpg" width="100"></div>
 				<h3 class="muted">福岡Debian勉強会<br />Fukuoka Debian Study</h3>
@@ -80,12 +80,28 @@
 
       <div class="row-fluid marketing">
         <div class="span9">
-				<h2>過去の福岡Debian勉強会</h2>
+				<h2>福岡Debian勉強会にてOSC2012 Fukuokaに参加しました</h2>
 				<ul>
-					<li><a href="./event02.html">第2回目@株式会社Paperboy and co.</a></li>
-					<li><a href="./event01-5.html">OSC2012 Fukuoka</a></li>
-					<li><a href="./event01.html">第1回目@ギルドコスタカフェ</a></li>
-					<li><a href="./event00.html">第0回目@富士ソフト 福岡オフィス</a></li>
+					<li>場所: KCS福岡情報専門学校<br /></li>
+					<li>日時:2012年12月8日(土) 10:00-18:00</li>
+					<li>登録サイト: <a href="https://www.ospn.jp/osc2012-fukuoka/">https://www.ospn.jp/osc2012-fukuoka/</a></li>
+					<li>ツイートまとめ: <a href=""></a></li>
+					<li>写真等:
+					<ul>
+						<li><a href="https://twitter.com/ayakomuro/status/277278102588100608">https://twitter.com/ayakomuro/status/277278102588100608</a></li>
+            <li><a href="https://twitter.com/minimum2scp/status/277210035740889088">https://twitter.com/minimum2scp/status/277210035740889088</a></li>
+            <li><a href="https://twitter.com/minimum2scp/status/277216020681351168">https://twitter.com/minimum2scp/status/277216020681351168</a></li>
+            <li><a href="https://twitter.com/minimum2scp/status/277219231479771136">https://twitter.com/minimum2scp/status/277219231479771136</a></li>
+            <li><a href="http://www.flickr.com/photos/minimum2scp/8255230048">http://www.flickr.com/photos/minimum2scp/8255230048</a></li>
+            <li><a href="http://www.flickr.com/photos/minimum2scp/8254157055">http://www.flickr.com/photos/minimum2scp/8254157055</a></li>
+            <li><a href="http://www.flickr.com/photos/minimum2scp/8254157539">http://www.flickr.com/photos/minimum2scp/8254157539</a></li>
+					</ul></li>
+				</ul>
+				<h3>ブースで展示した内容</h3>
+					<ul>
+					<li>Debian Wheezy インストールCD (Debian インストーラ 7.0 Beta4）の配布</li>
+          <li>Debian Wheezy をインストールしたノートPCの展示</li>
+          <li>Debian関連書籍の展示</li>
 				</ul>
         </div>
       </div>
