--- a/history/event03.html
+++ b/history/event03.html
@@ -2,7 +2,7 @@
 <html lang="jp">
   <head>
     <meta charset="utf-8">
-		<title>過去のイベント-福岡Debian勉強会/Fukuoka Debian Study</title>
+		<title>第3回福岡Debian勉強会/Fukuoka Debian Study</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="web page for Fukuoka Debian Study. 福岡Debian勉強会のサイトです ">
     <meta name="author" content="">
@@ -68,7 +68,7 @@
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
 					<li><a href="../index.html">ホーム/Home</a></li>
-					<li class="active"><a href=./history/index.html">勉強会履歴/History</a></li>
+					<li class="active"><a href="./index.html">勉強会履歴/History</a></li>
 				</ul>
 				<div class="span1"><img src="../img/fukuoka_debian.jpg" width="100"></div>
 				<h3 class="muted">福岡Debian勉強会<br />Fukuoka Debian Study</h3>
@@ -80,13 +80,28 @@
 
       <div class="row-fluid marketing">
         <div class="span9">
-				<h2>過去の福岡Debian勉強会</h2>
+				<h2>第n回目福岡Debian勉強会</h2>
 				<ul>
-          <li><a href="./event03.html">第3回目@OnRamp</a></li>
-					<li><a href="./event02.html">第2回目@株式会社Paperboy and co.</a></li>
-					<li><a href="./event01-5.html">OSC2012 Fukuoka</a></li>
-					<li><a href="./event01.html">第1回目@ギルドコスタカフェ</a></li>
-					<li><a href="./event00.html">第0回目@富士ソフト 福岡オフィス</a></li>
+					<li>場所:OnRamp<br />福岡県福岡市中央区天神1-10-24 天神セントラルプレイス 2F OnRamp内</li>
+					<li>日時:2013/3/30 16:00-18:00</li>
+					<li>登録サイト: <a href="">URL</a></li>
+					<li>ツイートまとめ: <a href="">URL</a></li>
+					<li>写真等:
+					<ul>
+						<li><a href="">URL</a></li>
+					</ul></li>
+				</ul>
+				<h3>公開資料</h3>
+        <!--
+					<h4>Aさん(@a)</h4>
+					<h4>Bさん (@b)</h4>
+        -->
+				<h3>資料用ブランチ</h3>
+				<p>ブランチ名: event03 </p>
+				<h3>ブログとかあれば</h3>
+				<ul>
+					<li></li>
+					<li></li>
 				</ul>
         </div>
       </div>
