--- a/history/event03.html
+++ b/history/event03.html
@@ -2,7 +2,7 @@
 <html lang="jp">
   <head>
     <meta charset="utf-8">
-		<title>第3回福岡Debian勉強会/Fukuoka Debian Study</title>
+		<title>第03回福岡Debian勉強会/Fukuoka Debian Study</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="web page for Fukuoka Debian Study. 福岡Debian勉強会のサイトです ">
     <meta name="author" content="">
@@ -80,11 +80,11 @@
 
       <div class="row-fluid marketing">
         <div class="span9">
-				<h2>第n回目福岡Debian勉強会</h2>
+				<h2>第03回目福岡Debian勉強会</h2>
 				<ul>
 					<li>場所:OnRamp<br />福岡県福岡市中央区天神1-10-24 天神セントラルプレイス 2F OnRamp内</li>
 					<li>日時:2013/3/30 16:00-18:00</li>
-					<li>登録サイト: <a href="">URL</a></li>
+					<li>登録サイト: <a href="http://www.zusaar.com/event/598006">http://www.zusaar.com/event/598006</a></li>
 					<li>ツイートまとめ: <a href="">URL</a></li>
 					<li>写真等:
 					<ul>
