--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="jp">
   <head>
     <meta charset="utf-8">
-		<title>福岡Debian勉強会/Fukuoka Debian Study</title>
+    <title>福岡Debian勉強会/Fukuoka Debian Study</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="web page for Fukuoka Debian Study. 福岡Debian勉強会のサイトです ">
+    <meta name="description" content="web page for Fukuoka Debian Study. 福岡Debian勉強会のサイトです ">
     <meta name="author" content="">
 
     <!-- Le styles -->
@@ -67,44 +67,45 @@
 
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
-					<li class="active"><a href="./index.html">ホーム/Home</a></li>
-					<li><a href="./history/index.html">勉強会履歴/History</a></li>
-				</ul>
-				<div class="span1"><img src="./img/fukuoka_debian.jpg" width="100"></div>
-				<h3 class="muted">福岡Debian勉強会<br />Fukuoka Debian Study</h3>
+          <li class="active"><a href="./index.html">ホーム/Home</a></li>
+          <li><a href="./history.html">勉強会履歴/History</a></li>
+        </ul>
+        <div class="span1"><img src="./img/fukuoka_debian.jpg" width="100"></div>
+        <h3 class="muted">福岡Debian勉強会<br />Fukuoka Debian Study</h3>
       </div>
 
       <hr>
 
       <div class="jumbotron">
-        <h1>第02回福岡Debian勉強会は終了しました!</h1>
-        <p class="lead">2013年最初の福岡Debian勉強会は終了しました。参加頂いた皆さん、会場を貸して頂いた株式会社paperboy&co.さん、ありがとうございました。</p>
-				<p class="lead">Fukuoka Debian Study No.2 has been finished! Thank you very much to all attendees and paperboy & co. for sponsor!</p>
-				<a class="btn btn-large btn-success" href="./history/index.html">続きを読む/Read More..</a>
+        <h1>第03回福岡Debian勉強会開催します。</h1>
+        <p class="lead">次期リリース予定のWheezyを中心に勉強します。</p>
+        <p class="lead">Fukuoka Debian Study No.3 will be held at 2013/3/30 on OnRamp. come and join us!</p>
+        <a class="btn btn-large btn-success" href="./history/index.html">続きを読む/Read More..</a>
       </div>
 
       <hr>
 
       <div class="row-fluid marketing">
         <div class="span6">
-					<h4>福岡Debian勉強会とは？What is Fukouka Debian Study?</h4>
-					<p>福岡、また周辺各地にいるDebian利用検討者、実利用者、開発者を集め、DebianやDebian周辺のパッケージや環境に対しての理解を深める勉強会です。</p>
+          <h4>福岡Debian勉強会とは？What is Fukouka Debian Study?</h4>
+          <p>福岡、また周辺各地にいるDebian利用検討者、実利用者、開発者を集め、DebianやDebian周辺のパッケージや環境に対しての理解を深める勉強会です。</p>
           <h4>どこで開催しているの？</h4>
-					<p>福岡県福岡市のどこかで毎回開催しています。</p>
+          <p>福岡県福岡市のどこかで毎回開催しています。今だと多分OnRampあたりです。</p>
           <h4>参加対象者は誰ですか？</h4>
-					<p>Debianを使ってみよう、という初心者から、熟れて来た中級者、俺がDebianだという上級者まで誰でも参加可能です。講義タイプでただ話を聞くのではなく、参加者みんなで意見を出し合いDebianについて理解を深めるという会ですので、気後れせず是非参加してみてください</p>
+          <p>Debianを使ってみよう、という初心者から、熟れて来た中級者、俺がDebianだという上級者まで誰でも参加可能です。講義タイプでただ話を聞くのではなく、参加者みんなで意見を出し合いDebianについて理解を深めるという会ですので、気後れせず是非参加してみてください</p>
 
         </div>
 
         <div class="span6">
           <h4>いつ開催しているの？</h4>
-					<p>隔月に開催を行なう予定です（2013年)。次回は3月です。</p>
+          <p>隔月に開催を行なう予定です（2013年)。次回は3月です。</p>
           <h4>誰が主催しているの？</h4>
-					<p>#fukuoka_debianのハッシュタグをつぶやいている人達です</p>
+          <p>#fukuoka_debianのハッシュタグをつぶやいている人達です</p>
+          <p>ご質問は<a href="https://twitter.com/ayakomuro" target="_blank">@ayakomuro</a>か<a href="https://twitter.com/minimum2scp" target="_blank">@minimum2scp</a>へどうぞ。</p>
 
           <h4>どうやって参加すればいいの？</h4>
-					<p>#fukuoka_debian のハッシュタグを小まめにチェックするか、このレポジトリを運営している人達をフォローするとATNDやZussarなどで参加イベント情報が流れてくるでしょう</p>
-				</div>
+          <p>#fukuoka_debian のハッシュタグを小まめにチェックするか、この<a href="https://github.com/fukuoka-debian">レポジトリ</a>を運営している人達をフォローするとATNDやZussarなどで参加イベント情報が流れてくるでしょう</p>
+        </div>
       </div>
 
       <hr>
@@ -118,8 +119,8 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-		<script src="./bootstrap/js/jquery.js"></script>
-	<!--
+    <script src="./bootstrap/js/jquery.js"></script>
+  <!--
     <script src="../assets/js/bootstrap-transition.js"></script>
     <script src="../assets/js/bootstrap-alert.js"></script>
     <script src="../assets/js/bootstrap-modal.js"></script>
@@ -132,7 +133,7 @@
     <script src="../assets/js/bootstrap-collapse.js"></script>
     <script src="../assets/js/bootstrap-carousel.js"></script>
     <script src="../assets/js/bootstrap-typeahead.js"></script>
-		-->
+    -->
 
   </body>
 </html>
