--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
           <li class="active"><a href="./index.html">ホーム/Home</a></li>
-          <li><a href="./history.html">勉強会履歴/History</a></li>
+          <li><a href="./history/index.html">勉強会履歴/History</a></li>
         </ul>
         <div class="span1"><img src="./img/fukuoka_debian.jpg" width="100"></div>
         <h3 class="muted">福岡Debian勉強会<br />Fukuoka Debian Study</h3>
