index変更、event03修正

--- a/history/event03.html
+++ b/history/event03.html
@@ -85,19 +85,20 @@
 					<li>場所:OnRamp<br />福岡県福岡市中央区天神1-10-24 天神セントラルプレイス 2F OnRamp内</li>
 					<li>日時:2013/3/28 19:00-21:00</li>
 					<li>登録サイト: <a href="http://www.zusaar.com/event/598006">http://www.zusaar.com/event/598006</a></li>
-					<li>ツイートまとめ: <a href="">URL</a></li>
+					<li>ツイートまとめ: <a href="http://togetter.com/li/482114">http://togetter.com/li/482114</a></li>
+          <li>Ust: <a href="http://www.ustream.tv/recorded/30517543">http://www.ustream.tv/recorded/30517543</a>
 					<li>写真等:
 					<ul>
 						<li><a href="">URL</a></li>
 					</ul></li>
 				</ul>
 				<h3>公開資料</h3>
-        <!--
-					<h4>Aさん(@a)</h4>
-					<h4>Bさん (@b)</h4>
-        -->
-				<h3>資料用ブランチ</h3>
-				<p>ブランチ名: event03 </p>
+					<h4>山田さん(@minimum2scp)</h4>
+           <a href="https://github.com/fukuoka-debian/doc/blob/master/event03/event03_yamada.rst">https://github.com/fukuoka-debian/doc/blob/master/event03/event03_yamada.rst</a>
+					<h4>小室さん (@ayakomuro)</h4>
+          <a href="https://github.com/fukuoka-debian/doc/blob/master/event03/event03_ayakomuro.rst">https://github.com/fukuoka-debian/doc/blob/master/event03/event03_ayakomuro.rst</a>
+				<h3>資料用レポジトリ</h3>
+        <a href="https://github.com/fukuoka-debian/doc/tree/master/event03">https://github.com/fukuoka-debian/doc/tree/master/event03</a>
 				<h3>ブログとかあれば</h3>
 				<ul>
 					<li></li>
