--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
       <hr>
 
       <div class="jumbotron">
-        <h1>第03回福岡Debian勉強会開催します。</h1>
-        <p class="lead">次期リリース予定のWheezyを中心に勉強します。</p>
-        <p class="lead">Fukuoka Debian Study No.3 will be held at 2013/3/30 on OnRamp. come and join us!</p>
+        <h1>第03回福岡Debian勉強会終了しました</h1>
+        <p class="lead">次期リリース予定のWheezyを中心に勉強しました。</p>
+        <p class="lead">Fukuoka Debian Study No.3 had been held at 2013/3/30 on OnRamp. Thank you for coming!</p>
         <a class="btn btn-large btn-success" href="./history/index.html">続きを読む/Read More..</a>
       </div>
 
