4回目の勉強会追加

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
       <hr>
 
       <div class="jumbotron">
-        <h1>第03回福岡Debian勉強会終了しました</h1>
-        <p class="lead">次期リリース予定のWheezyを中心に勉強しました。</p>
-        <p class="lead">Fukuoka Debian Study No.3 had been held at 2013/3/30 on OnRamp. Thank you for coming!</p>
+        <h1>第04回福岡Debian勉強会を開催します！</h1>
+        <p class="lead">先月開催された大統一Debian勉強会のレポート等を話します。</p>
+        <p class="lead">Fukuoka Debian Study No.4 will be held on 2013/9/10 on AIP Cafe.</p>
         <a class="btn btn-large btn-success" href="./history/index.html">続きを読む/Read More..</a>
       </div>
 
