--- a/history/event04.html
+++ b/history/event04.html
@@ -2,7 +2,7 @@
 <html lang="jp">
   <head>
     <meta charset="utf-8">
-		<title>過去のイベント-福岡Debian勉強会/Fukuoka Debian Study</title>
+		<title>第04回福岡Debian勉強会/Fukuoka Debian Study</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="web page for Fukuoka Debian Study. 福岡Debian勉強会のサイトです ">
     <meta name="author" content="">
@@ -68,7 +68,7 @@
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
 					<li><a href="../index.html">ホーム/Home</a></li>
-					<li class="active"><a href=./history/index.html">勉強会履歴/History</a></li>
+					<li class="active"><a href="./index.html">勉強会履歴/History</a></li>
 				</ul>
 				<div class="span1"><img src="../img/fukuoka_debian.jpg" width="100"></div>
 				<h3 class="muted">福岡Debian勉強会<br />Fukuoka Debian Study</h3>
@@ -80,17 +80,24 @@
 
       <div class="row-fluid marketing">
         <div class="span9">
-				<h2>次の福岡Debian勉強会</h2>
+				<h2>第04回目福岡Debian勉強会</h2>
 				<ul>
-				  <li><a href="./event04.html">第4回目@AIP Cafe</a></li>
+					<li>場所:<a href="http://www.npo-aip.or.jp/aip-cafe/" target="_blank">AIP Cafe</a><br />福岡市中央区大名1丁目14-28 紺屋2023 第一松村ビル302号室</li>
+					<li>日時:2013/9/10 19:30-22:00</li>
+					<li>登録サイト: <a href="http://www.zusaar.com/event/1020004">http://www.zusaar.com/event/1020004</a></li>
+					<li>ツイートまとめ: <a href=""></a></li>
+          <li>Ust: <a href=""></a>
+					<li>写真等:<a href=""></a></li>
 				</ul>
-				<h2>過去の福岡Debian勉強会</h2>
+				<h3>公開資料</h3>
 				<ul>
-          <li><a href="./event03.html">第3回目@OnRamp</a></li>
-					<li><a href="./event02.html">第2回目@株式会社Paperboy and co.</a></li>
-					<li><a href="./event01-5.html">OSC2012 Fukuoka</a></li>
-					<li><a href="./event01.html">第1回目@ギルドコスタカフェ</a></li>
-					<li><a href="./event00.html">第0回目@富士ソフト 福岡オフィス</a></li>
+					<li></li>
+					<li></li>
+				</ul>
+				<h3>ブログとかあれば</h3>
+				<ul>
+					<li></li>
+					<li></li>
 				</ul>
         </div>
       </div>
